# sandbox

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  justfile  pyproject.toml  sandbox_service_plan.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/artifacts/: artifacts-panel.tsx
frontend/src/components/connection/: connection-panel.tsx
frontend/src/components/exec/: exec-panel.tsx
frontend/src/components/files/: files-panel.tsx
frontend/src/components/layout/: header-bar.tsx
frontend/src/components/session/: session-panel.tsx
frontend/src/hooks/: use-sandbox-client.ts  use-sandbox-queries.ts
frontend/src/store/: sandbox-store.ts
sandbox/: __init__.py  backend.py
sandbox_service/: __init__.py  app_state.py  artifacts.py  cleanup.py  config.py  db.py  main.py  models.py  path_guard.py  policies.py  repositories.py  secure_defaults.py  snapshot_workspace.py  workspace.py
sandbox_service/api/: routes.py
sandbox_service/api/routes/: __init__.py  _shared.py  artifacts.py  execs.py  files.py  health.py  sessions.py  snapshots.py
sandbox_service/repositories/: __init__.py  artifacts.py  execs.py  files.py  models.py  sessions.py  snapshots.py
sandbox_service/runtime/: __init__.py  base.py  exec_env.py  local.py  microsandbox.py
tests/: test_auth.py  test_exec_env.py  test_microsandbox_events.py  test_microsandbox_exec.py  test_microsandbox_limits.py  test_path_guard.py  test_service.py  test_snapshot_workspace.py
(+7 files in other folders)
