[project]
name = "nexus-sandbox-service"
version = "0.1.0"
description = "Standalone sandbox compute-plane service for Nexus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "httpx==0.28.1",
    "microsandbox==0.5.10",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[project.scripts]
sandbox-service = "sandbox_service.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sandbox_service", "sandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
